--- a/css/style.css
+++ b/css/style.css
@@ -53,7 +53,7 @@ body {
     width: 100%;
     height: 100vh;
     min-height: 400px;
-    background: url('https://lidan.co.id/gambar/hero-psychology.jpg') no-repeat center center;
+    background: url('https://lidan-psikologi.my.id/gambar/hero-1.jpg') no-repeat center center;
     background-size: cover;
     display: flex;
     align-items: center;
